--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed": "ts-node src/database/seed.ts"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.5.6",
+    "supertest": "^7.1.1",
     "typeorm": "^0.3.17",
     "uuid": "^11.1.0"
   },
@@ -36,6 +38,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -44,6 +47,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.0",
     "ts-node": "^10.9.1",
